@@ -1,5 +1,6 @@
 package br.com.avocat.service;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -9,9 +10,11 @@ import javax.transaction.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import br.com.avocat.exception.AvocatException;
 import br.com.avocat.persistence.model.Unidade;
 import br.com.avocat.persistence.repository.EscritorioRepository;
 import br.com.avocat.persistence.repository.UnidadeRepository;
+import br.com.avocat.util.ObjetoUtil;
 import br.com.avocat.web.response.UnidadeResponse;
 
 @Service
@@ -19,42 +22,55 @@ public class UnidadeService {
 
 	@Autowired
 	private EscritorioRepository escritorioRepository;
-	
+
 	@Autowired
 	private UnidadeRepository unidadeRepository;
-	
+
 	@Transactional
 	public Optional<UnidadeResponse> save(Unidade unidade) {
+		validar(unidade);
 		
-		try {			
-
-			var escritorio = escritorioRepository.findById(unidade.getEscritorioId()).get();		
-			unidade.setEscritorio(escritorio);
-			
+		var escritorio = escritorioRepository.findById(unidade.getEscritorioId());
+		
+		if(escritorio.isPresent()) {
+			unidade.setEscritorio(escritorio.get());
 			var result = unidadeRepository.save(unidade);
-			
-			if(result != null)
-				return Optional.of(new UnidadeResponse(result));
-			else	
-				return Optional.empty();			
-		
-		} catch (Exception e) {
-			throw new RuntimeException(e);
+			return Optional.of(new UnidadeResponse(result));
+		} else {
+			return Optional.empty();
 		}
 	}
 
 	public Optional<UnidadeResponse> get(Long id) {
 		var result = unidadeRepository.findById(id);
-		
-		if(result.isPresent())
-			return Optional.ofNullable(new UnidadeResponse(result.get()));
-		else
-			return Optional.empty();
+		return result.map(UnidadeResponse::new);
 	}
 
 	public List<UnidadeResponse> all() {
-		var result = unidadeRepository.findAll();		
-		return result.stream().map(UnidadeResponse::new).collect(Collectors.toList());
+		var result = unidadeRepository.findAll();
+		return result.stream().map(UnidadeResponse::new).toList();
 	}
 
+	private void validar(Unidade unidade) {
+		
+		ObjetoUtil.verifica(unidade.getCnpj()).orElseThrow(() -> 
+			new AvocatException("CNPJ ou CPF não deve ser nulo ou vazio.")
+		);
+		
+		ObjetoUtil.verifica(unidade.getEmail()).orElseThrow(() -> 
+			new AvocatException("E-mail da unidade não deve ser nulo ou vazio.")
+		);
+		
+		ObjetoUtil.verifica(unidade.getEscritorioId()).orElseThrow(() ->
+			new AvocatException("Unidade deve ter um escritório.")
+		);
+		
+		ObjetoUtil.verifica(unidade.getRazaoSocial()).orElseThrow(() -> 
+			new AvocatException("Razão social não deve ser nulo ou vazio.")
+		);
+		
+		ObjetoUtil.verifica(unidade.getNomeUnidade()).orElseThrow(() -> 
+			new AvocatException("Nome da unidade não deve ser nulo ou vazio.")
+		);
+	}
 }
